--- a/src/assets/styles/sass/main.scss
+++ b/src/assets/styles/sass/main.scss
@@ -15,6 +15,7 @@
 //Themes
 @import "themes/vw";
 @import "themes/audi";
+@import "themes/default";
 
 //External
 @import "fontawesome/font-awesome.scss";
