--- a/src/assets/styles/sass/partials/_colors.scss
+++ b/src/assets/styles/sass/partials/_colors.scss
@@ -10,3 +10,9 @@ $vw-gray: #dee1e3;
 $audi-special:#f72b2e;
 $audi-dark:#2b2e34;
 $audi-gray:#a4b3bb;
+
+
+//Default Colors
+$default-special:#eae0d5;
+$default-dark:#363537;
+$default-gray:#fdfdff;
