--- a/src/assets/styles/sass/partials/_figures.scss
+++ b/src/assets/styles/sass/partials/_figures.scss
@@ -40,11 +40,12 @@ a[disabled=disabled] {
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+	-webkit-appearance: none;
+	margin: 0;
 }
+
 input[type="number"] {
-    -moz-appearance: textfield;
+	-moz-appearance: textfield;
 }
 
 @media (min-width:768px) {
@@ -91,10 +92,20 @@ table.table-card {
 	border-collapse: separate;
 	border-spacing: 10px;
 	*border-collapse: expression('separate', cellSpacing='10px');
+	width: 100%;
 }
 
 table.table-card td {
 	line-height: 20px;
+}
+
+table.table-card tr.row-border {
+
+	td {
+		background-color: darken($white, 5);
+		margin: 20px 0;
+		padding: 1px 0;
+	}
 }
 
 td.va-middle {
@@ -106,7 +117,6 @@ td[tr-ng-grid-footer-cell] {
 }
 
 
-
 div.body {
 	min-height: 780px;
 	display: block;
@@ -116,4 +126,34 @@ div.body {
 		margin-top: 160px;
 		display: block;
 	}
+}
+
+.input-icon {
+	position: relative;
+}
+
+.input-icon>i {
+	position: absolute;
+	display: block;
+	transform: translate(0, -50%);
+	top: 50%;
+	pointer-events: none;
+	width: 25px;
+	text-align: center;
+	font-style: normal;
+}
+
+.input-icon>input {
+	padding-left: 25px;
+	padding-right: 0;
+}
+
+.input-icon-right>i {
+	right: 5px;
+}
+
+.input-icon-right>input {
+	padding-left: 12px;
+	padding-right: 30px;
+	text-align: right;
 }
