--- a/src/app/components/select-options/step-three/manual-equipment-form/manualequipment.html
+++ b/src/app/components/select-options/step-three/manual-equipment-form/manualequipment.html
@@ -61,6 +61,7 @@
 				<input ng-model="$ctrl.equipment.price"
 				       required
 				       type="number"
+				       step="0.01"
 				       class="form-control"
 				       placeholder="Συμπληρώστε την τιμή του εξοπλισμού">
 			</div>
