--- a/src/assets/styles/sass/partials/_app-header.scss
+++ b/src/assets/styles/sass/partials/_app-header.scss
@@ -14,6 +14,15 @@ app-header {
 		display: inline-block;
 		text-decoration: none;
 		color: $white;
+		small {
+			@media (min-width: 641px) and (max-width:961px) {
+				width: 213px;
+				display: inline-block;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
+		}
 	}
 
 
