--- a/src/assets/styles/sass/partials/_colors.scss
+++ b/src/assets/styles/sass/partials/_colors.scss
@@ -6,6 +6,11 @@ $vw-special: #0099da;
 $vw-dark: #2f3638;
 $vw-gray: #dee1e3;
 
+//VW LCV Colors
+$vw_lcv-special: #0099da;
+$vw_lcv-dark: #dee1e3;
+$vw_lcv-gray: #2f3638;
+
 //Audi Colors
 $audi-special:#f72b2e;
 $audi-dark:#2b2e34;
