show/hide steps based on makeCode, include fuel type on registration fee, include more info on last step

--- a/src/app/components/select-options/selectoptions.html
+++ b/src/app/components/select-options/selectoptions.html
@@ -1,6 +1,8 @@
 <steps steps-flag="$ctrl.completedSteps"
        model="$ctrl.model"
-       color="$ctrl.color"></steps>
+       color="$ctrl.color"
+       has-colors="$ctrl.hasColors"
+       has-equipments="$ctrl.hasEquipments"></steps>
 
 <div class="padding o-hidden"
      ui-view>
