add next button on footer - core changes

--- a/src/app/components/select-options/selectoptions.html
+++ b/src/app/components/select-options/selectoptions.html
@@ -7,3 +7,6 @@
 <div class="padding o-hidden"
      ui-view>
 </div>
+
+<options-footer model="$ctrl.model"
+                on-next="$ctrl.next(step)"></options-footer>
