--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -212,6 +212,7 @@ div.body {
   margin-top: 80px; }
   div.body select-options {
     margin-top: 160px;
+    margin-bottom: 60px;
     display: block; }
 
 .input-icon {
@@ -321,10 +322,6 @@ app-header {
     height: 80px;
     width: auto; }
 
-app-footer {
-  height: 100px;
-  display: block; }
-
 car a {
   width: 100%;
   height: 200px;
@@ -420,6 +417,14 @@ steps {
     height: 0;
     content: " "; }
 
+options-footer {
+  height: 60px;
+  width: 100%;
+  display: block;
+  position: fixed;
+  bottom: 0;
+  padding: 10px 0; }
+
 button.my-button {
   border: none;
   border-radius: 0;
@@ -446,7 +451,7 @@ div.box {
   .vw app-header a.previous i {
     color: #0099da; }
 
-.vw app-footer {
+.vw options-footer {
   background-color: #dee1e3; }
 
 .vw car p {
@@ -507,7 +512,7 @@ div.box {
   .vw_lcv app-header a.previous i {
     color: #0099da; }
 
-.vw_lcv app-footer {
+.vw_lcv options-footer {
   background-color: #2f3638; }
 
 .vw_lcv car p {
@@ -568,7 +573,7 @@ div.box {
   .audi app-header a.previous i {
     color: #f72b2e; }
 
-.audi app-footer {
+.audi options-footer {
   background-color: #a4b3bb; }
 
 .audi car p {
@@ -630,7 +635,7 @@ div.box {
   .default app-header a.previous i {
     color: #eae0d5; }
 
-.default app-footer {
+.default options-footer {
   background-color: #fdfdff; }
 
 .default car p {
