--- a/src/assets/styles/sass/main.scss
+++ b/src/assets/styles/sass/main.scss
@@ -7,6 +7,7 @@
 @import "partials/app-footer";
 @import "partials/car";
 @import "partials/steps";
+@import "partials/options-footer";
 @import "partials/mixins";
 @import "partials/colors";
 @import "partials/buttons";
