--- a/src/assets/styles/sass/partials/_app-footer.scss
+++ b/src/assets/styles/sass/partials/_app-footer.scss
@@ -1,4 +1,7 @@
 app-footer {
-	height: 100px;
-	display: block;
+	// height: 60px;
+	// width:100%;
+	// display: block;
+	// position: fixed;
+	// bottom: 0;
 }
